<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/field01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/arrow_right_24dp"
                android:gravity="center_vertical"
                android:text="@string/txtName" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:hint="@string/hintName"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/field02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/arrow_right_24dp"
                android:gravity="center_vertical"
                android:text="@string/txtSurname" />

            <EditText
                android:id="@+id/txtSurname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:hint="@string/hintSurname"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/field03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/arrow_right_24dp"
                android:gravity="center_vertical"
                android:text="@string/txtWeb" />

            <EditText
                android:id="@+id/txtWeb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:hint="@string/hintWeb"
                android:inputType="textWebEditText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/field04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/arrow_right_24dp"
                android:gravity="center_vertical"
                android:text="@string/txtPhone" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:hint="@string/hintPhone"
                android:inputType="number" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="10sp">

            <Button
                android:id="@+id/btnShow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@color/colorDarkBlue"
                android:onClick="showMessage"
                android:text="Show"
                android:gravity="center"
                android:textColor="@color/colorWhiteCorp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:background="@color/colorDarkBlue"
                android:onClick="clearMessage"
                android:text="Clear"
                android:gravity="center"
                android:textColor="@color/colorWhiteCorp"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>